<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/RecyclePoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/question_horizontal_margin"
                android:layout_marginEnd="@dimen/question_horizontal_margin"
                android:fontFamily="sans-serif"
                android:text="@string/RecycleTitle"
                android:textAlignment="center"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/Location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.291"
                tools:text="@string/ReportTitle" />

            <EditText
                android:id="@+id/LocationInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.557"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="187dp" />

            <EditText
                android:id="@+id/RecyclePointNameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.597"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="316dp" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location"
                app:layout_constraintBottom_toTopOf="@+id/LocationInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.532"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/RecyclePointName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/RecyclePointName"
                app:layout_constraintBottom_toTopOf="@+id/RecyclePointNameInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LocationInput"
                app:layout_constraintVertical_bias="0.491" />

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="112dp"
                android:text="@string/Submit"
                android:textSize="@dimen/button_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/RecyclePointNameInput"
                app:layout_constraintVertical_bias="0.229" />

            <Button
                android:id="@+id/ClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="80dp"
                android:text="@string/Clear"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toEndOf="@+id/SubmitButton"
                app:layout_constraintTop_toTopOf="@+id/SubmitButton"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>